--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,10 +18,12 @@ services:
       - "6380:6380"
     restart: always
 
-  mysql:
+  mysql-master:
     image: mysql:5.7
-    container_name: maple_mysql_1
     environment:
+      - MYSQL_REPLICATION_MODE=master
+      - MYSQL_REPLICATION_USER=admin
+      - MYSQL_REPLICATION_PASSWORD=admin
       - MYSQL_ROOT_PASSWORD=123456
       - MYSQL_DATABASE=maple
       - MYSQL_USER=dbuser
@@ -34,10 +36,14 @@ services:
       - "3305:3305"
     restart: always
 
-  mysql2:
+  mysql-slave:
     image: mysql:5.7
-    container_name: maple_mysql_2
+    depends_on:
+      - mysql-master
     environment:
+      - MYSQL_REPLICATION_MODE=slave
+      - MYSQL_REPLICATION_USER=admin
+      - MYSQL_REPLICATION_PASSWORD=admin
       - MYSQL_ROOT_PASSWORD=123456
       - MYSQL_DATABASE=maple
       - MYSQL_USER=dbuser
@@ -50,21 +56,17 @@ services:
       - "3304:3304"
     restart: always
 
-  mysql3:
-    image: mysql:5.7
-    container_name: maple_mysql_3
-    environment:
-      - MYSQL_ROOT_PASSWORD=123456
-      - MYSQL_DATABASE=maple
-      - MYSQL_USER=dbuser
-      - MYSQL_PASSWORD=riu405405
-    volumes:
-      - mysql_vol3:/var/lib/mysql:rw
-      - ./compose/mysql3/conf/my.cnf:/etc/mysql/my.cnf
-      - ./compose/mysql3/init:/docker-entrypoint-initdb.d/
+  proxysql:
+    image: proxysql/proxysql:2.1.0
     ports:
-      - "3303:3303"
-    restart: always
+      - '6032:6032'
+      - '6033:6033'
+      - '6070:6070'
+    volumes:
+      - ./proxysql/proxysql.cnf:/etc/proxysql.cnf
+    depends_on:
+      - mysql-master
+      - mysql-slave
 
   web:
     build: .
