--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,7 +75,7 @@ services:
     build:
       context: ./compose/elasticsearch/
     volumes:
-      - ./elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
+      - ./compose/elasticsearch/config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
     ports:
       - "9200:9200"
       - "9300:9300"
@@ -89,8 +89,8 @@ services:
     build:
       context: ./compose/logstash/
     volumes:
-      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
-      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
+      - ./compose/logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
+      - ./compose/logstash/pipeline:/usr/share/logstash/pipeline:ro
     ports:
       - "5000:5000"
       - "12201:12201/udp"
@@ -106,7 +106,7 @@ services:
     build:
       context: ./compose/kibana/
     volumes:
-      - ./kibana/config/:/usr/share/kibana/config:ro
+      - ./compose/kibana/config/:/usr/share/kibana/config:ro
     ports:
       - "5601:5601"
     networks:
