--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ google-auth==2.6.6
 mysqlclient==1.4.6
 Pillow==7.1.2
 pytz==2021.3
+python-logstash==0.4.8
 redis==3.5.0
 sqlparse==0.4.2
 typing-extensions==4.0.1
