--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -115,6 +115,20 @@ services:
       - elasticsearch
     restart: always
 
+  prometheus:
+    image: prom/prometheus:v2.14.0
+    volumes:
+      - ./compose/prometheus/:/etc/prometheus/
+    command:
+      - config.file=/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:6.5.2
+    ports:
+      - "3060:3000"
+
 networks:
   elk:
     driver: bridge
