--- a/compose/prometheus/prometheus.yml
+++ b/compose/prometheus/prometheus.yml
@@ -7,5 +7,4 @@ global:
 scrape_configs:
   - job_name: monitoring
     static_configs:
-      - targets:
-        - host.docker.internal
+      - targets: ['localhost:9090', 'host.docker.internal']
