--- a/docker-compose2.yml
+++ b/docker-compose2.yml
@@ -9,8 +9,10 @@ services:
       - "--config.file=/etc/prometheus/prometheus.yml"
     ports:
       - "9090:9090"
+    restart: always
 
   grafana:
     image: grafana/grafana:6.5.2
     ports:
       - "3060:3000"
+    restart: always
