--- a/compose/prometheus/prometheus.yml
+++ b/compose/prometheus/prometheus.yml
@@ -7,4 +7,4 @@ global:
 scrape_configs:
   - job_name: monitoring
     static_configs:
-      - targets: ['192.168.223.127:8081', 'host.docker.internal:8081']
+      - targets: ['192.168.223.127:8081']
