--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-redis==4.11.0
 django-simpleui==2022.1
 django-simple-history==3.0.0
 django-gcloud-storage==0.5.0
+django-loki==0.1.4
 djangorestframework-simplejwt==5.1.0
 eventlet==0.30.2
 gunicorn==20.1.0
